--- a/main.css
+++ b/main.css
@@ -55,7 +55,9 @@ body {
   #main h4 {
     text-shadow: 0px 0px 5px #00000090; }
   #main .container {
-    display: flex; }
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap; }
     @media (max-width: 768px) {
       #main .container {
         flex-direction: column; } }
@@ -79,21 +81,23 @@ body {
         min-height: 150px;
         max-width: 150px; }
   #main .pcontainer .project {
-    margin: 20px 0; }
+    margin: 20px 0;
+    display: flex; }
+    @media (max-width: 768px) {
+      #main .pcontainer .project {
+        flex-direction: column;
+        align-content: center; } }
     #main .pcontainer .project p {
       margin: 5px 10px;
       text-align: justify; }
-    #main .pcontainer .project img {
-      width: 320px; }
     #main .pcontainer .project img, #main .pcontainer .project .video {
-      float: left;
       margin: 0 40px 0 0; }
     #main .pcontainer .project img.picture, #main .pcontainer .project iframe {
-      box-shadow: 5px 5px 5px #00000090; }
-    #main .pcontainer .project .clear {
-      clear: both; }
-    #main .pcontainer .project .text {
-      padding-top: 1px; }
+      box-shadow: 5px 5px 5px #00000090;
+      width: 320px; }
+      @media (max-width: 768px) {
+        #main .pcontainer .project img.picture, #main .pcontainer .project iframe {
+          width: 240px; } }
     #main .pcontainer .project .icons {
       display: flex;
       padding-top: 10px; }
@@ -109,6 +113,9 @@ body {
   z-index: 10;
   display: block;
   flex-direction: column; }
+  @media (max-width: 768px) {
+    #contact {
+      left: 5px; } }
   #contact a {
     display: flex;
     margin: 20px 0;
