--- a/main.scss
+++ b/main.scss
@@ -4,6 +4,7 @@ $header: #222426;
 $accent: #75ade6;
 $shadow: #00000090;
 $breakpoint-tablet: 768px;
+$breakpoint-desktop: 1024px;
 
 html {
     background-color: $background;
@@ -26,29 +27,6 @@ body {
     box-shadow: 0px 4px 10px $shadow;
     overflow: hidden;
 
-    .content {
-        width: 70%;
-        margin: 0px auto;
-        text-align: center;
-    }
-    p {
-        text-shadow: 0px 0px 5px $shadow;    
-    }
-}
-
-#unity-logo {
-    float: left;
-    height: 230px;
-    margin-top: -15px;
-    margin-left: 30px;
-    opacity: 20%;
-}
-
-#main {
-    margin: 20px auto auto auto;
-    min-height: 100px;
-    width: 70%;
-
     h1 {
         font-size: 40px;
         margin-bottom: 20px;
@@ -62,6 +40,48 @@ body {
             margin-bottom: 10px;
         }
     }
+
+    h2 {
+        color: $accent;
+        text-shadow: 0px 0px 5px $shadow;
+    }
+
+    .content {
+        width: 70%;
+        margin: 0px auto;
+        text-align: center;
+
+        @media (max-width: $breakpoint-tablet) {
+            width: 100%;
+        }
+    }
+    p {
+        text-shadow: 0px 0px 5px $shadow;    
+    }
+
+    .logo {
+
+        position: relative;
+        margin-top: -15px;
+        margin-left: 30px;
+        opacity: 20%;
+        @media (max-width: $breakpoint-tablet) {
+            display: none;
+        }
+        
+        img {
+            height: 230px;
+            position: absolute;
+        }
+    }
+}
+
+
+
+#main {
+    margin: 20px auto auto auto;
+    min-height: 100px;
+    width: 70%;
     
     h2, h3 {
         color: $accent;
@@ -110,6 +130,10 @@ body {
             &.tech {
                 min-height: 150px;
                 max-width: 150px;
+
+                @media (max-width: $breakpoint-tablet) {
+                    max-width: 250px;
+                }
             }
         }
     }
@@ -119,7 +143,7 @@ body {
             margin: 20px 0;
             display: flex;
 
-            @media (max-width: $breakpoint-tablet) {
+            @media (max-width: $breakpoint-desktop) {
                 flex-direction: column;
                 align-content: center;
             }
