--- a/main.scss
+++ b/main.scss
@@ -155,6 +155,9 @@ body {
 
             img, .video {
                 margin: 0 40px 0 0; 
+                @media (max-width: $breakpoint-tablet) {
+                    margin: 10px auto;
+                }
             }
 
             img.picture, iframe {
